--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-mdl": "^1.11.0",
     "react-particles-js": "^2.7.0",
     "react-pdf-js": "^5.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
