--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ema2159.github.io/Portfolio",
+  "homepage": "http://ema2159.github.io/",
   "name": "emma_portfolio",
   "version": "0.1.0",
   "private": true,
