Mod: Update Portfolio project link

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -18,6 +18,6 @@
     "name": "Personal portfolio",
     "image": "reactImage",
     "description": "Owner. This very portfolio, created from scratch using React.js with no prior knowledge on the tecnology.",
-    "github": "https://github.com/ema2159/Portfolio"
+    "github": "https://github.com/ema2159/ema2159.github.io"
   }
 ]
