--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emma_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ema2159.github.io/",
+  "homepage": "http://ema2159.github.io",
   "dependencies": {
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
