--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -10,11 +10,11 @@
     "id": 1,
     "name": "Doom Themes",
     "image": "emacsImage",
-    "description": "Maintainter. Emacs themes plugin with over 1000 Github stars, widely used by the community.",
+    "description": "Maintainer. Emacs themes plugin with over 1000 Github stars, widely used by the community.",
     "github": "https://github.com/hlissner/emacs-doom-themes"
   },
   {
-    "id": 0,
+    "id": 2,
     "name": "Personal portfolio",
     "image": "reactImage",
     "description": "Owner. This very portfolio, created from scratch using React.js with no prior knowledge on the tecnology.",
