--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://ema2159.github.io",
   "dependencies": {
+    "@bit/bondz.react-epic-spinners.trinity-rings-spinner": "^0.3.0",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material/tab-bar": "^4.0.0",
@@ -45,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
