--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,14 +3,14 @@
     "id": 0,
     "name": "Centaur Tabs",
     "image": "emacsImage",
-    "description": "Owner. Emacs tabs plugin with over 200 Github stars and over 50 solved issues.",
+    "description": "Owner. Emacs tabs plugin with over 200 Github stars and over 50 solved issues and over 10.000 downloads.",
     "github": "https://github.com/ema2159/centaur-tabs"
   },
   {
     "id": 1,
     "name": "Doom Themes",
     "image": "emacsImage",
-    "description": "Maintainer. Emacs themes plugin with over 1000 Github stars, widely used by the community.",
+    "description": "Maintainer. Emacs themes plugin with over 1000 Github stars and over 190.000 downloads",
     "github": "https://github.com/hlissner/emacs-doom-themes"
   },
   {
