Fix: Another typo

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     "id": 0,
     "name": "Centaur Tabs",
     "image": "emacsImage",
-    "description": "Owner. Emacs tabs plugin with over 200 Github stars and over 50 solved issues and over 10.000 downloads.",
+    "description": "Owner. Emacs tabs plugin with over 200 Github stars, over 50 solved issues and over 10.000 downloads.",
     "github": "https://github.com/ema2159/centaur-tabs"
   },
   {
